feat: implementa função para editar transações

--- a/src/projeto_crud.ipynb
+++ b/src/projeto_crud.ipynb
@@ -138,9 +138,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validar_opcao_escolhida():\n",
+    "def validar_opcao_sim_nao(pergunta):\n",
     "    while True:\n",
-    "        confirmacao = input(\"Deseja continuar? \\n1: Sim\\n2: Não\").strip()\n",
+    "        confirmacao = input(f\"{pergunta} \\n1: Sim\\n2: Não\").strip()\n",
     "        if confirmacao == \"1\" or confirmacao == \"2\":\n",
     "            clear_output(wait = True)\n",
     "            break\n",
@@ -148,6 +148,20 @@
     "            print(\"Opção inválida. ** Digite 1 para Sim e 2 para Não **\")\n",
     "            clear_output(wait = True)\n",
     "    return confirmacao\n",
+    "\n",
+    "\n",
+    "def validar_id(id, bd):\n",
+    "    try:\n",
+    "        transacao = [transacao for transacao in bd if transacao[\"UUID\"] == id][0]\n",
+    "        clear_output(wait = True)\n",
+    "        return transacao\n",
+    "    except IndexError:\n",
+    "        print(\"O ID informado não foi encontrado. Por favor, digite novamente.\")\n",
+    "        clear_output(wait = True)\n",
+    "    except:\n",
+    "        print(\"Erro inesperado. Tente novamente.\")\n",
+    "        clear_output(wait = True)\n",
+    "    return None\n",
     "\n",
     "\n",
     "def validar_valor(valor):\n",
@@ -158,7 +172,7 @@
     "        elif valor < 0:\n",
     "            raise Exception(\"O valor não pode ser negativo.\")\n",
     "        clear_output(wait = True)\n",
-    "        return valor\n",
+    "        return round(valor, 2)\n",
     "    except ValueError:\n",
     "        print(\"O valor inserido não é válido. ** Use apenas números e ponto como separador decimal **\")\n",
     "        clear_output(wait = True)\n",
@@ -194,27 +208,54 @@
     "    return None\n",
     "\n",
     "\n",
-    "def repetir_operacao(operacao):\n",
-    "    while True:\n",
-    "        repetir_operacao = input(f\"Deseja {operacao} outra transação? \\n1: Sim\\n2: Não\").strip()\n",
-    "        if repetir_operacao == \"1\" or repetir_operacao == \"2\":\n",
-    "            break \n",
-    "        else:\n",
-    "            print(\"Opção inválida. ** Digite 1 para Sim e 2 para Não **\")\n",
-    "            clear_output(wait = True)\n",
-    "    return repetir_operacao\n",
-    "\n",
-    "\n",
-    "def cadastrar_transacao(valor, categoria):\n",
-    "    transacoes = load_bd()\n",
+    "def cadastrar_transacao(valor, categoria, bd):\n",
     "    transacao = {\n",
     "        \"UUID\": str(uuid.uuid4()),\n",
     "        \"valor\": valor,\n",
     "        \"categoria\": categoria\n",
     "    }\n",
-    "    transacoes.append(transacao)\n",
-    "    return salvar_json(transacoes, \"./data\", \"transactions.json\")\n",
-    "    \n",
+    "    bd.append(transacao)\n",
+    "    return salvar_json(bd, \"./data\", \"transactions.json\")\n",
+    "\n",
+    "\n",
+    "def editar_transacao_por_ID(transacao, opcao, bd):\n",
+    "    if opcao == \"1\":\n",
+    "        while True:\n",
+    "            novo_valor = input(\"Digite o novo valor da transação: \").strip()\n",
+    "            novo_valor_validado = validar_valor(novo_valor)\n",
+    "            if novo_valor_validado is not None:\n",
+    "                transacao[\"valor\"] = novo_valor_validado\n",
+    "                break\n",
+    "    elif opcao == \"2\":\n",
+    "        while True:\n",
+    "            nova_categoria = input(\"Escolha a nova categoria da transação: \\n1: casa\\n2: lazer\\n3: viagens\\n4: investimentos\\n5: transferencias\\n6: saude\\n7: alimentacao\").strip()\n",
+    "            nova_categoria_validada = validar_categoria(nova_categoria)\n",
+    "            if nova_categoria_validada is not None:\n",
+    "                transacao[\"categoria\"] = nova_categoria_validada\n",
+    "                break\n",
+    "    else:\n",
+    "        while True:\n",
+    "            novo_valor = input(\"Digite o novo valor da transação: \").strip()\n",
+    "            novo_valor_validado = validar_valor(novo_valor)\n",
+    "            if novo_valor_validado is not None:\n",
+    "                transacao[\"valor\"] = novo_valor_validado\n",
+    "                break\n",
+    "        while True:\n",
+    "            nova_categoria = input(\"Escolha a nova categoria da transação: \\n1: casa\\n2: lazer\\n3: viagens\\n4: investimentos\\n5: transferencias\\n6: saude\\n7: alimentacao\").strip()\n",
+    "            nova_categoria_validada = validar_categoria(nova_categoria)\n",
+    "            if nova_categoria_validada is not None:\n",
+    "                transacao[\"categoria\"] = nova_categoria_validada\n",
+    "                break\n",
+    "    print(f\"Confira os dados atualizados: \\nValor: R$ {transacao['valor']:.2f}\\nCategoria: {transacao['categoria']}\")\n",
+    "    for dict_transacao in bd:\n",
+    "        if dict_transacao[\"UUID\"] == transacao[\"UUID\"]:\n",
+    "            dict_transacao[\"valor\"] = transacao[\"valor\"]\n",
+    "            dict_transacao[\"categoria\"] = transacao[\"categoria\"]\n",
+    "    with open(\"./data/transactions.json\", \"w\", encoding = \"utf-8\") as json_file:\n",
+    "        json.dump(bd, json_file, indent = 4, ensure_ascii = False)\n",
+    "    print(\"Transação editada com sucesso!\")\n",
+    "\n",
+    "\n",
     "\n",
     "def run():\n",
     "    \"\"\"\n",
@@ -242,8 +283,8 @@
     "\n",
     "        elif opcao_escolhida == \"2\":\n",
     "            print(\"*** CADASTRAR TRANSAÇÃO ***\")\n",
-    "            confirmacao = validar_opcao_escolhida()\n",
-    "            if confirmacao == \"2\":\n",
+    "            continuar = validar_opcao_sim_nao(\"Deseja continuar?\")\n",
+    "            if continuar == \"2\":\n",
     "                clear_output()\n",
     "                continue\n",
     "            while True:\n",
@@ -257,21 +298,44 @@
     "                    categoria_validada = validar_categoria(categoria)\n",
     "                    if categoria_validada is not None:\n",
     "                        break\n",
-    "                print(f'Valor: R$ {valor_validado:.2f}')\n",
-    "                print(f'Categoria: {categoria_validada}')\n",
+    "                print(f\"Valor: R$ {valor_validado:.2f}\\nCategoria: {categoria_validada}\")\n",
     "                \n",
-    "                cadastrar_transacao(valor, categoria)\n",
+    "                cadastrar_transacao(valor_validado, categoria_validada, bd)\n",
     "                print(\"Transação cadastrada com sucesso!\")\n",
     "                clear_output(wait = True)\n",
     "\n",
-    "                cadastrar_mais_transacoes = repetir_operacao(\"cadastrar\")\n",
+    "                cadastrar_mais_transacoes = validar_opcao_sim_nao(\"Deseja cadastrar outra transação?\")\n",
     "                if cadastrar_mais_transacoes == \"2\":\n",
     "                    break\n",
     "\n",
     "        \n",
     "        elif opcao_escolhida == \"3\":\n",
-    "            # editar_transacao_por_ID()\n",
-    "            print(\"OPÇÃO 3\")\n",
+    "            print(\"*** EDITAR TRANSAÇÃO ***\")\n",
+    "            continuar = validar_opcao_sim_nao(\"Deseja continuar?\")\n",
+    "            if continuar == \"2\":\n",
+    "                clear_output()\n",
+    "                continue\n",
+    "            while True:\n",
+    "                while True:\n",
+    "                    id = input(\"Informe o ID da transação que gostaria de editar: \").lower().strip()\n",
+    "                    transacao = validar_id(id, bd)\n",
+    "                    if transacao is not None:\n",
+    "                        break\n",
+    "                print(f\"A transação selecionada foi: \\nValor: R$ {transacao[\"valor\"]}\\nCategoria: {transacao['categoria']}\")\n",
+    "                clear_output(wait = True)\n",
+    "                while True:\n",
+    "                    escolher_opcao_editar = input(\"Qual informação você gostaria de editar? \\n1: Valor\\n2: Categoria\\n3: Ambos\").strip()\n",
+    "                    if escolher_opcao_editar in [\"1\", \"2\", \"3\"]:\n",
+    "                        editar_transacao_por_ID(transacao, escolher_opcao_editar, bd)\n",
+    "                        clear_output(wait = True)\n",
+    "                        break\n",
+    "                    else:\n",
+    "                        print(\"Opção inválida. Tente novamente.\")\n",
+    "                        clear_output(wait = True)\n",
+    "                        continue\n",
+    "                editar_mais_transacoes = validar_opcao_sim_nao(\"Deseja editar outra transação?\")\n",
+    "                if editar_mais_transacoes == \"2\":\n",
+    "                    break\n",
     "        \n",
     "        elif opcao_escolhida == \"4\":\n",
     "            # excluir_transacao()\n",
