feat: implementa função para excluir transações

--- a/src/projeto_crud.ipynb
+++ b/src/projeto_crud.ipynb
@@ -246,7 +246,7 @@
     "            if nova_categoria_validada is not None:\n",
     "                transacao[\"categoria\"] = nova_categoria_validada\n",
     "                break\n",
-    "    print(f\"Confira os dados atualizados: \\nValor: R$ {transacao['valor']:.2f}\\nCategoria: {transacao['categoria']}\")\n",
+    "    print(f\"Confira os dados atualizados: \\nUUID: {transacao[\"UUID\"]}\\nValor: R$ {transacao['valor']:.2f}\\nCategoria: {transacao['categoria']}\")\n",
     "    for dict_transacao in bd:\n",
     "        if dict_transacao[\"UUID\"] == transacao[\"UUID\"]:\n",
     "            dict_transacao[\"valor\"] = transacao[\"valor\"]\n",
@@ -254,6 +254,15 @@
     "    with open(\"./data/transactions.json\", \"w\", encoding = \"utf-8\") as json_file:\n",
     "        json.dump(bd, json_file, indent = 4, ensure_ascii = False)\n",
     "    print(\"Transação editada com sucesso!\")\n",
+    "\n",
+    "\n",
+    "def excluir_transacao(id, bd):\n",
+    "    bd = [transacao for transacao in bd if transacao[\"UUID\"] != id]\n",
+    "\n",
+    "    with open(\"./data/transactions.json\", \"w\", encoding = \"utf-8\") as json_file:\n",
+    "        json.dump(bd, json_file, indent = 4, ensure_ascii = False)\n",
+    "    print(\"Transação excluída com sucesso!\")\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -299,7 +308,7 @@
     "                    if categoria_validada is not None:\n",
     "                        break\n",
     "                print(f\"Valor: R$ {valor_validado:.2f}\\nCategoria: {categoria_validada}\")\n",
-    "                \n",
+    "\n",
     "                cadastrar_transacao(valor_validado, categoria_validada, bd)\n",
     "                print(\"Transação cadastrada com sucesso!\")\n",
     "                clear_output(wait = True)\n",
@@ -321,7 +330,7 @@
     "                    transacao = validar_id(id, bd)\n",
     "                    if transacao is not None:\n",
     "                        break\n",
-    "                print(f\"A transação selecionada foi: \\nValor: R$ {transacao[\"valor\"]}\\nCategoria: {transacao['categoria']}\")\n",
+    "                print(f\"A transação selecionada foi: \\nUUID: {transacao[\"UUID\"]}\\nValor: R$ {transacao[\"valor\"]:.2f}\\nCategoria: {transacao['categoria']}\")\n",
     "                clear_output(wait = True)\n",
     "                while True:\n",
     "                    escolher_opcao_editar = input(\"Qual informação você gostaria de editar? \\n1: Valor\\n2: Categoria\\n3: Ambos\").strip()\n",
@@ -333,13 +342,39 @@
     "                        print(\"Opção inválida. Tente novamente.\")\n",
     "                        clear_output(wait = True)\n",
     "                        continue\n",
+    "                \n",
     "                editar_mais_transacoes = validar_opcao_sim_nao(\"Deseja editar outra transação?\")\n",
     "                if editar_mais_transacoes == \"2\":\n",
     "                    break\n",
     "        \n",
+    "\n",
     "        elif opcao_escolhida == \"4\":\n",
-    "            # excluir_transacao()\n",
-    "            print(\"PÇÃO 4\")\n",
+    "            print(\"*** EXCLUIR TRANSAÇÃO ***\")\n",
+    "            continuar = validar_opcao_sim_nao(\"Deseja continuar?\")\n",
+    "            if continuar == \"2\":\n",
+    "                clear_output()\n",
+    "                continue\n",
+    "            while True:\n",
+    "                while True:\n",
+    "                    id = input(\"Informe o ID da transação que gostaria de excluir: \").lower().strip()\n",
+    "                    transacao = validar_id(id, bd)\n",
+    "                    if transacao is not None:\n",
+    "                        break\n",
+    "                print(f\"A transação selecionada foi: \\nUUID: {transacao[\"UUID\"]}\\nValor: R$ {transacao[\"valor\"]:.2f}\\nCategoria: {transacao['categoria']}\")\n",
+    "                clear_output(wait = True)\n",
+    "\n",
+    "                confirmar_exclusao = validar_opcao_sim_nao(\"Deseja prosseguir com a exclusão?\")\n",
+    "                if confirmar_exclusao == \"2\":\n",
+    "                    clear_output()\n",
+    "                    break\n",
+    "\n",
+    "                excluir_transacao(transacao[\"UUID\"], bd)\n",
+    "                clear_output(wait = True)\n",
+    "\n",
+    "                excluir_mais_transacoes = validar_opcao_sim_nao(\"Deseja excluir outra transação?\")\n",
+    "                if excluir_mais_transacoes == \"2\":\n",
+    "                    break\n",
+    "        \n",
     "        \n",
     "        else:\n",
     "            print(\"Opção inválida, digite novamente.\")"
