feat: implementa funções para visualziar relatórios

--- a/src/projeto_crud.ipynb
+++ b/src/projeto_crud.ipynb
@@ -65,6 +65,7 @@
     "import random\n",
     "import sys\n",
     "from IPython.display import clear_output\n",
+    "from math import trunc\n",
     "\n",
     "# -----------------------\n",
     "# load settings\n",
@@ -150,7 +151,7 @@
     "    return confirmacao\n",
     "\n",
     "\n",
-    "def validar_id(id, bd):\n",
+    "def consultar_transacao_por_ID(id, bd):\n",
     "    try:\n",
     "        transacao = [transacao for transacao in bd if transacao[\"UUID\"] == id][0]\n",
     "        clear_output(wait = True)\n",
@@ -264,6 +265,125 @@
     "    print(\"Transação excluída com sucesso!\")\n",
     "\n",
     "\n",
+    "def relatorio_por_categoria(bd, operacao):\n",
+    "    lista_categorias = [\"casa\", \"lazer\", \"viagens\", \"investimentos\", \"transferencias\", \"saude\", \"alimentacao\"]\n",
+    "    dict_relatorios_categorias = {}\n",
+    "    for categoria in lista_categorias:\n",
+    "        filtro_categoria = list(filter(lambda x: x.get(\"categoria\") == categoria, bd))\n",
+    "        if operacao == \"total\":\n",
+    "            if len(filtro_categoria) > 0:\n",
+    "                total = round(sum([transacao[\"valor\"] for transacao in filtro_categoria]), 2)\n",
+    "                dict_relatorios_categorias[categoria] = total\n",
+    "                print(f\"O total da categoria '{categoria}' é R$ {dict_relatorios_categorias.get(categoria):.2f}\")\n",
+    "        elif operacao == \"media\":\n",
+    "            if len(filtro_categoria) > 0:\n",
+    "                media = round(sum([transacao[\"valor\"] for transacao in filtro_categoria]) / len(filtro_categoria), 2)\n",
+    "                dict_relatorios_categorias[categoria] = media\n",
+    "                print(f\"A média da categoria '{categoria}' é R$ {dict_relatorios_categorias.get(categoria):.2f}\")\n",
+    "        elif operacao == \"maiores\":\n",
+    "            if len(filtro_categoria) > 0:\n",
+    "                cinco_maiores_transacoes = sorted(filtro_categoria, key = lambda transacao: transacao[\"valor\"], reverse = True)[:5]\n",
+    "                dict_relatorios_categorias[categoria] = cinco_maiores_transacoes\n",
+    "        elif operacao == \"menores\":\n",
+    "            if len(filtro_categoria) > 0:\n",
+    "                cinco_menores_transacoes = sorted(filtro_categoria, key = lambda transacao: transacao[\"valor\"])[:5]\n",
+    "                dict_relatorios_categorias[categoria] = cinco_menores_transacoes\n",
+    "        elif operacao == \"medianas\":\n",
+    "            if len(filtro_categoria) > 0:\n",
+    "                transacoes_ordenadas = sorted(filtro_categoria, key = lambda transacao: transacao[\"valor\"])\n",
+    "                centro_da_lista = len(transacoes_ordenadas) / 2\n",
+    "                if len(transacoes_ordenadas) < 5:\n",
+    "                    cinco_transacoes_medianas = transacoes_ordenadas\n",
+    "                elif len(transacoes_ordenadas) % 2 == 0:\n",
+    "                    cinco_transacoes_medianas = transacoes_ordenadas[(int(centro_da_lista) - 2) : (int(centro_da_lista) + 3)]\n",
+    "                else:\n",
+    "                    cinco_transacoes_medianas = transacoes_ordenadas[(trunc(centro_da_lista) - 2) : (round(centro_da_lista) + 2)]\n",
+    "                dict_relatorios_categorias[categoria] = cinco_transacoes_medianas\n",
+    "    if operacao in [\"maiores\", \"menores\", \"medianas\"]:\n",
+    "        for categoria in dict_relatorios_categorias:\n",
+    "            print(f\"As top 5 {operacao} da categoria '{categoria}' são:\")\n",
+    "            for indice, transacao in enumerate(dict_relatorios_categorias[categoria]):\n",
+    "                print(f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\")\n",
+    "            print()\n",
+    "\n",
+    "\n",
+    "def calcular_total_transacoes(bd, categoria):\n",
+    "    total_transacoes = sum([transacao[\"valor\"] for transacao in bd])\n",
+    "    print(f\"O total das transações é R$ {total_transacoes:.2f}\")\n",
+    "    if categoria == \"1\":\n",
+    "        totais_por_categoria = relatorio_por_categoria(bd, \"total\")\n",
+    "\n",
+    "\n",
+    "def mostrar_m5_transacoes(bd, categoria, operacao):\n",
+    "    if operacao == \"maiores\":\n",
+    "        cinco_transacoes = sorted(bd, key = lambda transacao: transacao[\"valor\"], reverse = True)[:5]\n",
+    "    elif operacao == \"menores\":\n",
+    "        cinco_transacoes = sorted(bd, key = lambda transacao: transacao[\"valor\"])[:5]\n",
+    "    elif operacao == \"medianas\":\n",
+    "        transacoes_ordenadas = sorted(bd, key = lambda transacao: transacao[\"valor\"])\n",
+    "        centro_da_lista = len(transacoes_ordenadas) / 2\n",
+    "        if len(transacoes_ordenadas) < 5:\n",
+    "            cinco_transacoes = transacoes_ordenadas\n",
+    "        elif len(transacoes_ordenadas) % 2 == 0:\n",
+    "            cinco_transacoes = transacoes_ordenadas[(int(centro_da_lista) - 2) : (int(centro_da_lista) + 3)]\n",
+    "        else:\n",
+    "            cinco_transacoes = transacoes_ordenadas[(trunc(centro_da_lista) - 2) : (round(centro_da_lista) + 2)]\n",
+    "    print(f\"As top 5 {operacao} são:\")\n",
+    "    for indice, transacao in enumerate(cinco_transacoes):\n",
+    "        print(f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\")\n",
+    "    if categoria == \"1\":\n",
+    "        m5_por_categoria = relatorio_por_categoria(bd, operacao)\n",
+    "\n",
+    "\n",
+    "def calcular_media(bd, categoria):\n",
+    "    media_transacoes = sum([transacao[\"valor\"] for transacao in bd]) / len(bd)\n",
+    "    print(f\"A média das transações é R$ {media_transacoes:.2f}\")\n",
+    "    if categoria == \"1\":\n",
+    "        medias_por_categoria = relatorio_por_categoria(bd, \"media\")\n",
+    "\n",
+    "\n",
+    "def visualizar_relatorios():\n",
+    "    print(\"\\nEste menu permite visualizar os relatórios de sua conta pessoal.\")\n",
+    "    print(\"\\nEscolha uma das opções abaixo:\")\n",
+    "    print(\"1. Total das transações\")\n",
+    "    print(\"2. Top 5 maiores transações\")\n",
+    "    print(\"3. Top 5 menores transações\")\n",
+    "    print(\"4. Top 5 transações medianas\")\n",
+    "    print(\"5. Média transações\")\n",
+    "    print(\"-\" * 10)\n",
+    "    print(\"0. Sair\")\n",
+    "    print('\\n')\n",
+    "    opcao_escolhida = input().strip()\n",
+    "    clear_output(wait = True)\n",
+    "    while True:\n",
+    "        if opcao_escolhida == \"0\":\n",
+    "            print(\"SAIR\")\n",
+    "            break\n",
+    "        elif opcao_escolhida == \"1\":\n",
+    "            print(\"*** TOTAL DAS TRANSAÇÕES ***\")\n",
+    "            categoria = validar_opcao_sim_nao(\"Deseja calcular o total por categoria também?\")\n",
+    "            calcular_total_transacoes(bd, categoria)\n",
+    "            break\n",
+    "        elif opcao_escolhida == \"2\":\n",
+    "            print(\"*** TOP 5 MAIORES TRANSAÇÕES ***\")\n",
+    "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
+    "            mostrar_m5_transacoes(bd, categoria, \"maiores\")\n",
+    "            break\n",
+    "        elif opcao_escolhida == \"3\":\n",
+    "            print(\"*** TOP 5 MENORES TRANSAÇÕES ***\")\n",
+    "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
+    "            mostrar_m5_transacoes(bd, categoria, \"menores\")\n",
+    "            break\n",
+    "        elif opcao_escolhida == \"4\":\n",
+    "            print(\"*** TOP 5 TRANSAÇÕES MEDIANAS ***\")\n",
+    "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
+    "            mostrar_m5_transacoes(bd, categoria, \"medianas\")\n",
+    "            break\n",
+    "        elif opcao_escolhida == \"5\":\n",
+    "            print(\"*** MÉDIA DAS TRANSAÇÕES ***\")\n",
+    "            categoria = validar_opcao_sim_nao(\"Deseja calcular a média por categoria também?\")\n",
+    "            calcular_media(bd, categoria)\n",
+    "            break\n",
     "\n",
     "\n",
     "def run():\n",
@@ -286,9 +406,20 @@
     "            print(\"SAIR\")\n",
     "            break\n",
     "\n",
+    "\n",
     "        elif opcao_escolhida == \"1\":\n",
-    "            # visualizar_relatorios()\n",
-    "            print(\"OPÇÃO 1\")\n",
+    "            print(\"*** VISUALIZAR RELATÓRIOS ***\")\n",
+    "            continuar = validar_opcao_sim_nao(\"Deseja continuar?\")\n",
+    "            if continuar == \"2\":\n",
+    "                clear_output()\n",
+    "                continue\n",
+    "            while True:\n",
+    "                visualizar_relatorios()\n",
+    "                \n",
+    "                visualizar_outros_relatorios = validar_opcao_sim_nao(\"Deseja visualizar outro relatório?\")\n",
+    "                if visualizar_outros_relatorios == \"2\":\n",
+    "                    break\n",
+    "\n",
     "\n",
     "        elif opcao_escolhida == \"2\":\n",
     "            print(\"*** CADASTRAR TRANSAÇÃO ***\")\n",
@@ -327,7 +458,7 @@
     "            while True:\n",
     "                while True:\n",
     "                    id = input(\"Informe o ID da transação que gostaria de editar: \").lower().strip()\n",
-    "                    transacao = validar_id(id, bd)\n",
+    "                    transacao = consultar_transacao_por_ID(id, bd)\n",
     "                    if transacao is not None:\n",
     "                        break\n",
     "                print(f\"A transação selecionada foi: \\nUUID: {transacao[\"UUID\"]}\\nValor: R$ {transacao[\"valor\"]:.2f}\\nCategoria: {transacao['categoria']}\")\n",
@@ -357,7 +488,7 @@
     "            while True:\n",
     "                while True:\n",
     "                    id = input(\"Informe o ID da transação que gostaria de excluir: \").lower().strip()\n",
-    "                    transacao = validar_id(id, bd)\n",
+    "                    transacao = consultar_transacao_por_ID(id, bd)\n",
     "                    if transacao is not None:\n",
     "                        break\n",
     "                print(f\"A transação selecionada foi: \\nUUID: {transacao[\"UUID\"]}\\nValor: R$ {transacao[\"valor\"]:.2f}\\nCategoria: {transacao['categoria']}\")\n",
