--- a/src/projeto_crud.ipynb
+++ b/src/projeto_crud.ipynb
@@ -274,12 +274,10 @@
     "            if len(filtro_categoria) > 0:\n",
     "                total = round(sum([transacao[\"valor\"] for transacao in filtro_categoria]), 2)\n",
     "                dict_relatorios_categorias[categoria] = total\n",
-    "                print(f\"O total da categoria '{categoria}' é R$ {dict_relatorios_categorias.get(categoria):.2f}\")\n",
     "        elif operacao == \"media\":\n",
     "            if len(filtro_categoria) > 0:\n",
     "                media = round(sum([transacao[\"valor\"] for transacao in filtro_categoria]) / len(filtro_categoria), 2)\n",
     "                dict_relatorios_categorias[categoria] = media\n",
-    "                print(f\"A média da categoria '{categoria}' é R$ {dict_relatorios_categorias.get(categoria):.2f}\")\n",
     "        elif operacao == \"maiores\":\n",
     "            if len(filtro_categoria) > 0:\n",
     "                cinco_maiores_transacoes = sorted(filtro_categoria, key = lambda transacao: transacao[\"valor\"], reverse = True)[:5]\n",
@@ -299,47 +297,57 @@
     "                else:\n",
     "                    cinco_transacoes_medianas = transacoes_ordenadas[(trunc(centro_da_lista) - 2) : (round(centro_da_lista) + 2)]\n",
     "                dict_relatorios_categorias[categoria] = cinco_transacoes_medianas\n",
-    "    if operacao in [\"maiores\", \"menores\", \"medianas\"]:\n",
-    "        for categoria in dict_relatorios_categorias:\n",
-    "            print(f\"As top 5 {operacao} da categoria '{categoria}' são:\")\n",
-    "            for indice, transacao in enumerate(dict_relatorios_categorias[categoria]):\n",
-    "                print(f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\")\n",
-    "            print()\n",
+    "    return dict_relatorios_categorias\n",
     "\n",
     "\n",
     "def calcular_total_transacoes(bd, categoria):\n",
     "    total_transacoes = sum([transacao[\"valor\"] for transacao in bd])\n",
-    "    print(f\"O total das transações é R$ {total_transacoes:.2f}\")\n",
     "    if categoria == \"1\":\n",
     "        totais_por_categoria = relatorio_por_categoria(bd, \"total\")\n",
+    "    else:\n",
+    "        totais_por_categoria = None\n",
+    "    return total_transacoes, totais_por_categoria\n",
     "\n",
     "\n",
     "def mostrar_m5_transacoes(bd, categoria, operacao):\n",
     "    if operacao == \"maiores\":\n",
-    "        cinco_transacoes = sorted(bd, key = lambda transacao: transacao[\"valor\"], reverse = True)[:5]\n",
+    "        m5_transacoes = sorted(bd, key = lambda transacao: transacao[\"valor\"], reverse = True)[:5]\n",
     "    elif operacao == \"menores\":\n",
-    "        cinco_transacoes = sorted(bd, key = lambda transacao: transacao[\"valor\"])[:5]\n",
+    "        m5_transacoes = sorted(bd, key = lambda transacao: transacao[\"valor\"])[:5]\n",
     "    elif operacao == \"medianas\":\n",
     "        transacoes_ordenadas = sorted(bd, key = lambda transacao: transacao[\"valor\"])\n",
     "        centro_da_lista = len(transacoes_ordenadas) / 2\n",
     "        if len(transacoes_ordenadas) < 5:\n",
-    "            cinco_transacoes = transacoes_ordenadas\n",
+    "            m5_transacoes = transacoes_ordenadas\n",
     "        elif len(transacoes_ordenadas) % 2 == 0:\n",
-    "            cinco_transacoes = transacoes_ordenadas[(int(centro_da_lista) - 2) : (int(centro_da_lista) + 3)]\n",
+    "            m5_transacoes = transacoes_ordenadas[(int(centro_da_lista) - 2) : (int(centro_da_lista) + 3)]\n",
     "        else:\n",
-    "            cinco_transacoes = transacoes_ordenadas[(trunc(centro_da_lista) - 2) : (round(centro_da_lista) + 2)]\n",
-    "    print(f\"As top 5 {operacao} são:\")\n",
-    "    for indice, transacao in enumerate(cinco_transacoes):\n",
-    "        print(f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\")\n",
+    "            m5_transacoes = transacoes_ordenadas[(trunc(centro_da_lista) - 2) : (round(centro_da_lista) + 2)]\n",
     "    if categoria == \"1\":\n",
     "        m5_por_categoria = relatorio_por_categoria(bd, operacao)\n",
+    "    else:\n",
+    "        m5_por_categoria = None\n",
+    "    return m5_transacoes, m5_por_categoria\n",
     "\n",
     "\n",
     "def calcular_media(bd, categoria):\n",
     "    media_transacoes = sum([transacao[\"valor\"] for transacao in bd]) / len(bd)\n",
-    "    print(f\"A média das transações é R$ {media_transacoes:.2f}\")\n",
     "    if categoria == \"1\":\n",
     "        medias_por_categoria = relatorio_por_categoria(bd, \"media\")\n",
+    "    else:\n",
+    "        medias_por_categoria = None\n",
+    "    return media_transacoes, medias_por_categoria\n",
+    "\n",
+    "\n",
+    "def salvar_relatorio(relatorio, nome_relatorio, diretorio):\n",
+    "    with open(f\"{diretorio}/{nome_relatorio}\", \"w\", encoding = \"utf-8\") as arquivo:\n",
+    "        if type(relatorio) == list:\n",
+    "            for transacao in relatorio:\n",
+    "                linha = transacao + \"\\n\\n\"\n",
+    "                arquivo.write(linha)\n",
+    "        else:\n",
+    "            arquivo.write(relatorio)\n",
+    "    print(f\"Relatório salvo em {diretorio}/{nome_relatorio}\")\n",
     "\n",
     "\n",
     "def visualizar_relatorios():\n",
@@ -357,33 +365,102 @@
     "    clear_output(wait = True)\n",
     "    while True:\n",
     "        if opcao_escolhida == \"0\":\n",
-    "            print(\"SAIR\")\n",
+    "            print(\"SAINDO...\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"1\":\n",
     "            print(\"*** TOTAL DAS TRANSAÇÕES ***\")\n",
     "            categoria = validar_opcao_sim_nao(\"Deseja calcular o total por categoria também?\")\n",
-    "            calcular_total_transacoes(bd, categoria)\n",
+    "            total, total_categorias = calcular_total_transacoes(bd, categoria)\n",
+    "            relatorio = f\"O total das transações é R$ {total:.2f}\"\n",
+    "            print(relatorio)\n",
+    "            salvar_relatorio(relatorio, \"total_transacoes.txt\", \"./relatorios\")\n",
+    "            if total_categorias is not None:\n",
+    "                relatorio_categorias = []\n",
+    "                for categoria in total_categorias:\n",
+    "                    relatorio_categoria = f\"O total da categoria '{categoria}' é R$ {total_categorias.get(categoria):.2f}\"\n",
+    "                    relatorio_categorias.append(relatorio_categoria)\n",
+    "                    print(relatorio_categoria) \n",
+    "                salvar_relatorio(relatorio_categorias, \"total_por_categoria.txt\", \"./relatorios\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"2\":\n",
     "            print(\"*** TOP 5 MAIORES TRANSAÇÕES ***\")\n",
     "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
-    "            mostrar_m5_transacoes(bd, categoria, \"maiores\")\n",
+    "            operacao = \"maiores\"\n",
+    "            m5_transacoes, m5_por_categoria = mostrar_m5_transacoes(bd, categoria, operacao)\n",
+    "            relatorio = f\"As top 5 {operacao} são:\\n\"\n",
+    "            for indice, transacao in enumerate(m5_transacoes):\n",
+    "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
+    "            print(relatorio)\n",
+    "            salvar_relatorio(relatorio, \"top5_maiores_transacoes.txt\", \"./relatorios\")\n",
+    "            if m5_por_categoria is not None:\n",
+    "                relatorio_categorias = []\n",
+    "                for categoria in m5_por_categoria:\n",
+    "                    relatorio_categoria = f\"As top 5 {operacao} da categoria '{categoria}' são:\"\n",
+    "                    for indice, transacao in enumerate(m5_por_categoria[categoria]):\n",
+    "                        relatorio_categoria += f\"\\n({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\"\n",
+    "                    relatorio_categorias.append(relatorio_categoria)\n",
+    "                    print(relatorio_categoria)\n",
+    "                    print()\n",
+    "                salvar_relatorio(relatorio_categorias, \"top5_maiores_por_categoria.txt\", \"./relatorios\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"3\":\n",
     "            print(\"*** TOP 5 MENORES TRANSAÇÕES ***\")\n",
     "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
-    "            mostrar_m5_transacoes(bd, categoria, \"menores\")\n",
+    "            operacao = \"menores\"\n",
+    "            m5_transacoes, m5_por_categoria = mostrar_m5_transacoes(bd, categoria, operacao)\n",
+    "            relatorio = f\"As top 5 {operacao} são:\\n\"\n",
+    "            for indice, transacao in enumerate(m5_transacoes):\n",
+    "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
+    "            print(relatorio)\n",
+    "            salvar_relatorio(relatorio, \"top5_menores_transacoes.txt\", \"./relatorios\")\n",
+    "            if m5_por_categoria is not None:\n",
+    "                relatorio_categorias = []\n",
+    "                for categoria in m5_por_categoria:\n",
+    "                    relatorio_categoria = f\"As top 5 {operacao} da categoria '{categoria}' são:\"\n",
+    "                    for indice, transacao in enumerate(m5_por_categoria[categoria]):\n",
+    "                        relatorio_categoria += f\"\\n({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\"\n",
+    "                    relatorio_categorias.append(relatorio_categoria)\n",
+    "                    print(relatorio_categoria)\n",
+    "                    print()\n",
+    "                salvar_relatorio(relatorio_categorias, \"top5_menores_por_categoria.txt\", \"./relatorios\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"4\":\n",
     "            print(\"*** TOP 5 TRANSAÇÕES MEDIANAS ***\")\n",
     "            categoria = validar_opcao_sim_nao(\"Deseja calcular o top 5 por categoria também?\")\n",
-    "            mostrar_m5_transacoes(bd, categoria, \"medianas\")\n",
+    "            operacao = \"medianas\"\n",
+    "            m5_transacoes, m5_por_categoria = mostrar_m5_transacoes(bd, categoria, operacao)\n",
+    "            relatorio = f\"As top 5 {operacao} são:\\n\"\n",
+    "            for indice, transacao in enumerate(m5_transacoes):\n",
+    "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
+    "            print(relatorio)\n",
+    "            salvar_relatorio(relatorio, \"top5_transacoes_medianas.txt\", \"./relatorios\")\n",
+    "            if m5_por_categoria is not None:\n",
+    "                relatorio_categorias = []\n",
+    "                for categoria in m5_por_categoria:\n",
+    "                    relatorio_categoria = f\"As top 5 {operacao} da categoria '{categoria}' são:\"\n",
+    "                    for indice, transacao in enumerate(m5_por_categoria[categoria]):\n",
+    "                        relatorio_categoria += f\"\\n({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\"\n",
+    "                    relatorio_categorias.append(relatorio_categoria)\n",
+    "                    print(relatorio_categoria)\n",
+    "                    print()\n",
+    "                salvar_relatorio(relatorio_categorias, \"top5_medianas_por_categoria.txt\", \"./relatorios\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"5\":\n",
     "            print(\"*** MÉDIA DAS TRANSAÇÕES ***\")\n",
     "            categoria = validar_opcao_sim_nao(\"Deseja calcular a média por categoria também?\")\n",
-    "            calcular_media(bd, categoria)\n",
+    "            media_transacoes, medias_por_categoria = calcular_media(bd, categoria)\n",
+    "            relatorio = f\"A média das transações é R$ {media_transacoes:.2f}\"\n",
+    "            print(relatorio)\n",
+    "            salvar_relatorio(relatorio, \"media_transacoes.txt\", \"./relatorios\")\n",
+    "            if medias_por_categoria is not None:\n",
+    "                relatorio_categorias = []\n",
+    "                for categoria in medias_por_categoria:\n",
+    "                    relatorio_categoria = f\"A média da categoria '{categoria}' é R$ {medias_por_categoria.get(categoria):.2f}\"\n",
+    "                    relatorio_categorias.append(relatorio_categoria)\n",
+    "                    print(relatorio_categoria) \n",
+    "                salvar_relatorio(relatorio_categorias, \"media_por_categoria.txt\", \"./relatorios\")\n",
     "            break\n",
+    "\n",
     "\n",
     "\n",
     "def run():\n",
@@ -403,7 +480,7 @@
     "        clear_output(wait = True)\n",
     "        \n",
     "        if opcao_escolhida == \"0\":\n",
-    "            print(\"SAIR\")\n",
+    "            print(\"SAINDO...\")\n",
     "            break\n",
     "\n",
     "\n",
