feat: add arquivos de relatórios salvos como exemplo

--- a/src/projeto_crud.ipynb
+++ b/src/projeto_crud.ipynb
@@ -373,14 +373,14 @@
     "            total, total_categorias = calcular_total_transacoes(bd, categoria)\n",
     "            relatorio = f\"O total das transações é R$ {total:.2f}\"\n",
     "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"total_transacoes.txt\", \"./relatorios\")\n",
+    "            salvar_relatorio(relatorio, \"total_transacoes.txt\", \"./reports\")\n",
     "            if total_categorias is not None:\n",
     "                relatorio_categorias = []\n",
     "                for categoria in total_categorias:\n",
     "                    relatorio_categoria = f\"O total da categoria '{categoria}' é R$ {total_categorias.get(categoria):.2f}\"\n",
     "                    relatorio_categorias.append(relatorio_categoria)\n",
     "                    print(relatorio_categoria) \n",
-    "                salvar_relatorio(relatorio_categorias, \"total_por_categoria.txt\", \"./relatorios\")\n",
+    "                salvar_relatorio(relatorio_categorias, \"total_por_categoria.txt\", \"./reports\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"2\":\n",
     "            print(\"*** TOP 5 MAIORES TRANSAÇÕES ***\")\n",
@@ -391,7 +391,7 @@
     "            for indice, transacao in enumerate(m5_transacoes):\n",
     "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
     "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"top5_maiores_transacoes.txt\", \"./relatorios\")\n",
+    "            salvar_relatorio(relatorio, \"top5_maiores_transacoes.txt\", \"./reports\")\n",
     "            if m5_por_categoria is not None:\n",
     "                relatorio_categorias = []\n",
     "                for categoria in m5_por_categoria:\n",
@@ -401,7 +401,7 @@
     "                    relatorio_categorias.append(relatorio_categoria)\n",
     "                    print(relatorio_categoria)\n",
     "                    print()\n",
-    "                salvar_relatorio(relatorio_categorias, \"top5_maiores_por_categoria.txt\", \"./relatorios\")\n",
+    "                salvar_relatorio(relatorio_categorias, \"top5_maiores_por_categoria.txt\", \"./reports\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"3\":\n",
     "            print(\"*** TOP 5 MENORES TRANSAÇÕES ***\")\n",
@@ -412,7 +412,7 @@
     "            for indice, transacao in enumerate(m5_transacoes):\n",
     "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
     "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"top5_menores_transacoes.txt\", \"./relatorios\")\n",
+    "            salvar_relatorio(relatorio, \"top5_menores_transacoes.txt\", \"./reports\")\n",
     "            if m5_por_categoria is not None:\n",
     "                relatorio_categorias = []\n",
     "                for categoria in m5_por_categoria:\n",
@@ -422,7 +422,7 @@
     "                    relatorio_categorias.append(relatorio_categoria)\n",
     "                    print(relatorio_categoria)\n",
     "                    print()\n",
-    "                salvar_relatorio(relatorio_categorias, \"top5_menores_por_categoria.txt\", \"./relatorios\")\n",
+    "                salvar_relatorio(relatorio_categorias, \"top5_menores_por_categoria.txt\", \"./reports\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"4\":\n",
     "            print(\"*** TOP 5 TRANSAÇÕES MEDIANAS ***\")\n",
@@ -433,7 +433,7 @@
     "            for indice, transacao in enumerate(m5_transacoes):\n",
     "                relatorio += f\"({indice + 1}) \\n\\tUUID: {transacao[\"UUID\"]}\\n\\tValor: R$ {transacao[\"valor\"]:.2f}\\n\\tCategoria: {transacao['categoria']}\\n\"\n",
     "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"top5_transacoes_medianas.txt\", \"./relatorios\")\n",
+    "            salvar_relatorio(relatorio, \"top5_transacoes_medianas.txt\", \"./reports\")\n",
     "            if m5_por_categoria is not None:\n",
     "                relatorio_categorias = []\n",
     "                for categoria in m5_por_categoria:\n",
@@ -443,7 +443,7 @@
     "                    relatorio_categorias.append(relatorio_categoria)\n",
     "                    print(relatorio_categoria)\n",
     "                    print()\n",
-    "                salvar_relatorio(relatorio_categorias, \"top5_medianas_por_categoria.txt\", \"./relatorios\")\n",
+    "                salvar_relatorio(relatorio_categorias, \"top5_medianas_por_categoria.txt\", \"./reports\")\n",
     "            break\n",
     "        elif opcao_escolhida == \"5\":\n",
     "            print(\"*** MÉDIA DAS TRANSAÇÕES ***\")\n",
@@ -451,14 +451,14 @@
     "            media_transacoes, medias_por_categoria = calcular_media(bd, categoria)\n",
     "            relatorio = f\"A média das transações é R$ {media_transacoes:.2f}\"\n",
     "            print(relatorio)\n",
-    "            salvar_relatorio(relatorio, \"media_transacoes.txt\", \"./relatorios\")\n",
+    "            salvar_relatorio(relatorio, \"media_transacoes.txt\", \"./reports\")\n",
     "            if medias_por_categoria is not None:\n",
     "                relatorio_categorias = []\n",
     "                for categoria in medias_por_categoria:\n",
     "                    relatorio_categoria = f\"A média da categoria '{categoria}' é R$ {medias_por_categoria.get(categoria):.2f}\"\n",
     "                    relatorio_categorias.append(relatorio_categoria)\n",
     "                    print(relatorio_categoria) \n",
-    "                salvar_relatorio(relatorio_categorias, \"media_por_categoria.txt\", \"./relatorios\")\n",
+    "                salvar_relatorio(relatorio_categorias, \"media_por_categoria.txt\", \"./reports\")\n",
     "            break\n",
     "\n",
     "\n",
